Fix spacing on sort.  Fix word break.

--- a/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/Bundles/Forerunner-all.css
+++ b/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/Bundles/Forerunner-all.css
@@ -1025,11 +1025,11 @@ ul.fr-nav-container { display: block; white-space: nowrap; vertical-align: top; 
 .fr-print-unit-label { width: 20px; font-size: 10pt; color: #999999; margin-left: 4px; }
 
 
-.fr-render-sort-unsorted { background-image: url('../../reportviewer/Images/NotSorted.gif'); display: inline; background-repeat: no-repeat; padding: 2px 7px 2px 7px; background-position: center; cursor: pointer; float: right; }
+.fr-render-sort-unsorted { background-image: url('../../reportviewer/Images/NotSorted.gif'); display: table-cell;  width:15px; background-repeat: no-repeat; padding: 2px 2px 2px 2px; background-position: center; cursor: pointer; float: right; }
 
-.fr-render-sort-descending { background-image: url(../../reportviewer/Images/SortDecending.gif); display: inline; background-repeat: no-repeat; padding: 2px 7px 2px 7px; background-position: center; cursor: pointer; float: right; }
+.fr-render-sort-descending { background-image: url(../../reportviewer/Images/SortDecending.gif); display: table-cell;  width:15px; background-repeat: no-repeat; padding: 2px 2px 2px 2px; background-position: center; cursor: pointer; float: right; }
 
-.fr-render-sort-ascending { background-image: url(../../reportviewer/Images/SortAccending.gif); display: inline; background-repeat: no-repeat; padding: 2px 7px 2px 7px; background-position: center; cursor: pointer; float: right; }
+.fr-render-sort-ascending { background-image: url(../../reportviewer/Images/SortAccending.gif); display: table-cell; width:15px; background-repeat: no-repeat; padding: 2px 2px 2px 2px; background-position: center; cursor: pointer; float: right; }
 
 .fr-rotate-90 { -webkit-transform: rotate(90deg); -moz-transform: rotate(90deg); -o-transform: rotate(90deg); -ms-transform: rotate(90deg); transform: rotate(90deg); }
 .fr-rotate-270 { -webkit-transform: rotate(270deg); -moz-transform: rotate(270deg); -ms-transform: rotate(270deg); -o-transform: rotate(270deg); transform: rotate(270deg); }
@@ -1066,7 +1066,7 @@ ul.fr-nav-container { display: block; white-space: nowrap; vertical-align: top; 
 
 .fr-render-rec {display:table;border-collapse:collapse;}
 .fr-r-rT{display:table;table-layout: fixed;position:relative;}
-.fr-r-t{white-space:pre-wrap;margin:0;display: table-cell;overflow:hidden; }
+.fr-r-t{white-space:pre-wrap;margin:0;display: table-cell;overflow:hidden; -ms-word-wrap:break-word;word-wrap:break-word;} 
 .fr-r-pL{width:100%;height:100%;}
 .fr-render-image{display:block;max-height:100%;max-width:100%;overflow:hidden;}
 .fr-r-tC{vertical-align:top;padding:0;margin:0;}
